# PaperFlow

./: .gitignore  Cargo.toml  README.md  start.sh
.github/workflows/: deploy.yml
docs/: 01-overview.md  02-architecture.md  02-data-flow.md  05-configuration.md  SUMMARY.md  book.toml  discussion-2026-04-25.md
docs/03-backend/: 01-server.md  02a-paper.md  02c-config.md  03b-search.md  03c-translate.md  04-arxiv.md  06a-trait.md  06b-openai.md  06d-prompt.md  07-filter.md  08-scheduler.md  09-storage.md
docs/04-frontend/: 01-index.md  02b-input.md  02c-search.md  03b-search-prompt.md  03d-paper-detail.md  03e-loading.md  04-services.md
homebrew/: paperflow.plist
src/: lib.rs  main.rs
src/api/: handlers.rs  mod.rs  state.rs
src/commands/: chat.rs  fetch.rs  list.rs  mod.rs  speak.rs
src/config/: mod.rs  settings.rs
src/core/: audio.rs  config.rs  error.rs  mod.rs  paper.rs
src/modules/: mod.rs
src/modules/arxiv/: client.rs  mod.rs
src/modules/filter/: mod.rs  scorer.rs
src/modules/llm/: mod.rs  prompt.rs  trait_.rs
src/modules/llm/providers/: minimax.rs  mod.rs  openai.rs
src/modules/scheduler/: job.rs  mod.rs
src/modules/semantic_scholar/: client.rs  mod.rs
src/modules/speech/: mod.rs  recognizer.rs  synthesizer.rs
src/modules/speech/providers/: groq_whisper.rs  mod.rs  system_say.rs
src/modules/storage/: db.rs  mod.rs
src/modules/storage/migrations/: 001_initial.sql
src/ui/: mod.rs
src/ui/tui/: app.rs  mod.rs
ui/: package-lock.json  package.json  tsconfig.json
ui/src/: App.tsx  index.tsx
ui/src/components/: ConfigMenu.tsx  Home.tsx  LoadingSpinner.tsx  PaperDetail.tsx  PaperList.tsx  PersistentInputBar.tsx  SearchPrompt.tsx  Welcome.tsx
ui/src/hooks/: useInputHandler.ts  usePaperSearch.ts
ui/src/services/: arxiv.ts  minimax.ts  tts.ts
