[package]
name = "paperflow"
version = "0.1.0"
edition = "2024"
authors = ["PaperFlow Team"]
description = "全天候语音学术助理 - API Server"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# Web / HTTP
reqwest = { version = "0.12", features = ["json", "multipart"] }
axum = "0.8"
tower = "0.5"
tower-http = { version = "0.6", features = ["cors"] }

# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Error handling
thiserror = "2"
anyhow = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Utils
chrono = { version = "0.4", features = ["serde"] }
directories = "6"

# Async traits
async-trait = "0.1"

# Regex
regex = "1"

# Config file
toml = "0.8"

[dev-dependencies]
mockall = "0.13"
